Se avanza con modulo 1 y se comienza modulo 2

--- a/1. Introduction/1.2.Python.ipynb
+++ b/1. Introduction/1.2.Python.ipynb
@@ -13,7 +13,60 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "`Python` es un lenguaje de programación de alto nivel, interpretado"
+    "`Python` es un lenguaje de programación ampliamente utilizado en el desarrollo de aplicaciones web, de software, la ciencia de datos y el machine learning (ML). Los desarrolladores utilizan Python debido a que es eficiente y fácil de aprender, además de que se puede ejecutar en muchas plataformas diferentes (Windows, Linux y MacOS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Un poco de la historia de Python:\n",
+    "\n",
+    "- Su creador es Guido Van Rossum, un programador de los Países Bajos. \n",
+    "- Comenzó en 1989 en el Centrum Wiskunde & Informatica (CWI), en principio como un proyecto de afición. \n",
+    "- El nombre del lenguaje se inspiró en el programa de televisión de la BBC “Monty Python’s Flying Circus”, debido a que Guido Van Rossum era un gran fanático del mismo.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Historial de lanzamientos de Python\n",
+    "\n",
+    "- **1991**: Guido Van Rossum publica la primera versión del código Python (versión 0.9.0). Dicha versión ya incluía buenas características, como algunos tipos de datos y funciones para la gestión de errores.\n",
+    "\n",
+    "- **1994**: se lanza Python 1.0, con nuevas funciones para procesar fácilmente una lista de datos, como la asignación, el filtrado y la reducción.\n",
+    "\n",
+    "- **2000**: Python 2.0 se lanza el 16 de octubre, con nuevas características útiles para los programadores, como la compatibilidad con los caracteres Unicode y una forma más corta de recorrer una lista.\n",
+    "\n",
+    "- **2008**: se lanza Python 3.0. Incluía características como la función de impresión y más soporte para la división de números y la gestión de errores. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ¿Cuáles son las características de Python?\n",
+    "\n",
+    "- **Lenguaje interpretado**\n",
+    "\n",
+    "Significa que ejecuta directamente el código línea por línea (no requiere compilar para ejecutar). Si existen errores en el código del programa, su ejecución se detiene. Así, los programadores pueden encontrar errores en el código con rapidez.\n",
+    "\n",
+    "- **Fácil de utilizar**\n",
+    "\n",
+    "Utiliza palabras similares a las del inglés. A diferencia de otros lenguajes de programación, Python no utiliza llaves. En su lugar, utiliza sangría.\n",
+    "\n",
+    "- **Tipado dinámico**\n",
+    "\n",
+    "A diferencia de los lenguajes de tipado estático, los programadores no tienen que declarar el tipo de dato de una variable cuando escriben código porque Python los determina en tiempo de ejecución. Debido a esto, es posible escribir programas con mayor rapidez.\n",
+    "\n",
+    "- **Lenguaje de alto nivel**\n",
+    "\n",
+    "Significa que la sintaxis de Python es cercana a la del idioma de los humano y no al de una máquina (código binario - 0 y 1). Por lo tanto, los programadores no deben preocuparse sobre sus funcionalidades subyacentes, como la arquitectura y la administración de la memoria.\n",
+    "\n",
+    "- **Orientado a los objetos**\n",
+    "\n",
+    "Python considera todo como un objeto. La Programación Orientada a Objetos (POO) es un paradigma de programación admitido por el lenguaje, así como  la programación estructurada (modular), funcional o secuencial."
    ]
   }
  ],
