--- a/1. Introduction/1.4.Entorno_Virtual.ipynb
+++ b/1. Introduction/1.4.Entorno_Virtual.ipynb
@@ -57,6 +57,17 @@
     "\n",
     "`conda create --name [ENV_NAME]` donde ENV_NAME representa el nombre del entorno"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio\n",
+    "\n",
+    "En esta sección se plantea un ejercicio sencillo relacionado con lo visto anteriormente.\n",
+    "\n",
+    "En tal sentido, se propone al usuari@ que esté tomando el curso que se anime a instalar Python en su sistema local (la/s opción/es que más le gusten), el/los IDE/s que le interesen (personalizándolo a gusto) y que cree dos entornos virtuales: uno utilizando el módulo `venv` y otro empleando el gestor de paquetes `conda` "
+   ]
   }
  ],
  "metadata": {
